[package]
name = "demo_qldb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amazon-qldb-driver = { version = "0.1.0", git = "https://github.com/awslabs/amazon-qldb-driver-rust" }
amazon-qldb-driver-core = { version = "0.1.0", git = "https://github.com/awslabs/amazon-qldb-driver-rust" }
anyhow = "1.0.75"
dotenv = "0.15.0"
ion-c-sys = "0.4.17"
tokio = { version = "1.35.0", features = ["full"] }
aws-config = { version = "0.54.1", features = [] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
